syntax = "proto3";

package errors;

option go_package = "github.com/jupyter-naas/naas-models/go/errors";

import "validate.proto";

enum Error {
    // Generic errors 0 - 199
    
    NO_ERROR = 0;
    INTERNAL_SERVER_ERROR = 199;

    // IAM errors 200 - 299

    IAM_USER_NOT_FOUND = 200;
    IAM_USER_NOT_AUTHORIZED = 201;
    IAM_API_KEY_ALREADY_EXISTS = 202;

    // Workspace errors 300 - 399

    WORKSPACE_NOT_FOUND = 300;
    WORKSPACE_USER_ALREADY_EXISTS = 302;
    WORKSPACE_USER_NOT_FOUND = 303;
    WORKSPACE_USER_ALREADY_ACTIVE = 304;
    WORKSPACE_USER_ALREADY_HAVE_PERSONAL_WORKSPACE = 305;
    WORKSPACE_PLUGIN_NOT_FOUND = 306;
    WORKSPACE_INVITE_INVALID = 307;
    WORKSPACE_CANNOT_INVITE_TO_PERSONAL_WORKSPACE = 308;

    // Credits errors 400 - 499

    CREDITS_USER_HAS_NO_PARENT = 400;
    CREDITS_OUT_OF_CREDITS = 401;
    CREDITS_USER_ALREADY_HAS_PARENT = 402;

    // Ontology errors 500 - 599
    ONTOLOGY_NOT_FOUND = 500;

    // Chat errors - 600 - 699
    CHAT_NOT_FOUND = 600;
    CHAT_NOT_AUTHORIZED = 601;
    CHAT_COMPLETION_ADAPTOR_DOES_NOT_EXIST = 602;
    CHAT_CONTEXT_LENGTH_EXCEEDED = 603;
    CHAT_MESSAGE_ALREADY_EXISTS = 604;
    CHAT_MESSAGE_NOT_FOUND = 605;

    CHAT_INTERNAL_SERVER_ERROR = 699;

    // AIModel errors - 700 - 799
    AIMODEL_NOT_FOUND = 700;

    // Assets errors - 800 - 899
    ASSET_NOT_FOUND = 800;
    ASSET_ALREADY_EXISTS = 801;
    ASSET_REQUEST_ERROR = 802;

}

message ErrorResponse {
    optional Error code = 1;
    optional string message = 2;
}